# CADEX

./: CMakeLists.txt  README.md  main.cpp
Curve/: CMakeLists.txt  Circle.cpp  Circle.h  Curve.h  Derivative.cpp  Derivative.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h  Point.cpp  Point.h  Utils.cpp  Utils.h
Curve/include/: Circle.h  Curve.h  Curves.h  Derivative.h  Ellipse.h  Helix.h  Point.h  RadiusException.h
Curve/src/: Circle.cpp  Derivative.cpp  Ellipse.cpp  Helix.cpp  Point.cpp  Utils.cpp
src/: RadiusParallelSummator.h  main.cpp
